name:               blog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >=1.10

executable site
  main-is:          site.hs
  build-depends:    base >=4.14 && <5
                  , hakyll >=4.16 && <4.17
                  , containers >=0.6.7 && <0.7
                  , pandoc >=2.0 && <3.0
  ghc-options:      -threaded
  default-language: Haskell2010